# gleaner

./: LICENSE.txt  README  README.md  gleaner.py  pyproject.toml
data/: bgk_timing.res  timing.res
examples/animation/channel_cylinder/: vel_ani.py
examples/performance/: example_perf.py
examples/performance_musubi/: strongScaling.py  timing_bgk_cray.res  weakScaling.py
examples/radialReduction/: plot_Cp.py
examples/spatialReduction/: plot_avg.py
examples/tracing/crvp/: example_track.py  musubi.lua  seeder.lua  singleRun.zsh
examples/tracing/gauss/: dens_track.py  musubi.lua  seeder.lua  singleRun.zsh
examples/tracking_nozzle/: common.lua  example_track.py  example_track_ani.py
examples/tracking_nozzle/tracking/: nozzle_2D_hline.lua  nozzle_2D_hline_p00000_t0.000E+00.res  nozzle_2D_hline_p00000_t1.050E+00.res  nozzle_2D_hline_p00000_t1.100E+00.res  nozzle_2D_hline_p00000_t1.150E+00.res  nozzle_2D_hline_p00000_t1.200E+00.res  nozzle_2D_hline_p00000_t1.250E+00.res  nozzle_2D_hline_p00000_t1.300E+00.res  nozzle_2D_hline_p00000_t1.350E+00.res  nozzle_2D_hline_p00000_t1.400E+00.res  nozzle_2D_hline_p00000_t1.450E+00.res  nozzle_2D_hline_p00000_t1.499E+00.res  nozzle_2D_hline_p00000_t1.549E+00.res  nozzle_2D_hline_p00000_t1.599E+00.res  nozzle_2D_hline_p00000_t1.649E+00.res  nozzle_2D_hline_p00000_t1.699E+00.res  nozzle_2D_hline_p00000_t1.749E+00.res  nozzle_2D_hline_p00000_t1.799E+00.res  nozzle_2D_hline_p00000_t1.849E+00.res  nozzle_2D_hline_p00000_t1.899E+00.res  nozzle_2D_hline_p00000_t1.949E+00.res  nozzle_2D_hline_p00000_t1.999E+00.res  (+143 more)
(+1681 files in other folders)
